Fixed spacing, alignment and added JS code to toggle the read more in about section and session description

--- a/site/pages/index.css
+++ b/site/pages/index.css
@@ -8,7 +8,7 @@ body {
 	margin-top: 1em;
 	margin-bottom: 1.8em;
 }
-.hero .q-button.agenda {
+.hero .q-button.agenda-btn {
 	margin-right: 1em;
 }
 .button-wrapper {
@@ -78,7 +78,7 @@ body {
 	color: #fff;
 	margin-left: 0;
 	margin-right: 0;
-    line-height: 1.35;
+	line-height: 1.35;
 }
 .about .open-quote {
 	position: absolute;
@@ -86,7 +86,7 @@ body {
 .about .quote-author {
 	font-size: 14px;
 	font-weight: 400;
-    margin-top: 13px;
+	margin-top: 13px;
 }
 .about .horz-divider {
 	border-top: 5px solid #000;
@@ -98,30 +98,48 @@ body {
 	color: #fff;
 	margin-top: 3.5em;
 }
+@media (min-width: 900px) {
+	.event {
+		margin-top: 200px;
+	}
+}
+.event .heading--5 {
+	margin-top: 0;
+	margin-bottom: 0;
+}
 .event .heading--2 {
 	font-size: 32px;
-    margin-top: 0;
-    line-height: 1.2;
-    margin-bottom: 0;
+	margin-top: 0;
+	line-height: 1.2;
+	margin-top: 0.3em;
+	margin-bottom: 0.3em;
+	color: #FFF;
 }
 .event .city {
 	font-size: 32px;
 	margin-top: 0;
-    margin-bottom: 0;
+	margin-bottom: 0;
 }
 .event .date-location {
 	font-size: 18px;
 	margin-bottom: 24px;
+	margin-top: 0;
+	line-height: 1.65;
 }
 .speakers {
-    margin-top: 4em;
+	margin-top: 4em;
+}
+.speakers .heading--2 {
+	margin-top: 0;
+	text-align: center;
+	margin-bottom: 0;
 }
 .speakers .heading--2,
 .agenda .heading--2 {
-	font-size: 32px;
+	font-size: 40px;
 }
 .cso-speakers__thumbnails-container {
-	margin-top: 0;
+	margin-top: 20px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
@@ -136,15 +154,38 @@ body {
 .cso-speakers__name {
 	font-size: 14px;
 	margin-bottom: 0;
+	color: #FFF;
+	text-align: center;
 }
 .cso-speakers__title {
 	font-size: 14px;
-    line-height: 1.2;
+	line-height: 1.2;
+	color: #FFF;
+	text-align: center;
+}
+.speaker-headshot {
+	position: relative;
+}
+.speaker-headshot::after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(to bottom, rgba(0,0,0,0) 45%,#11151B 100%);
+	z-index: 1;
+	top: 0;
+	left: 0;
 }
 .agenda {
 	margin-bottom: 3.5em;
 	color: #fff;
 	margin-top: 1em;
+}
+@media (min-width: 720px) {
+	.agenda {
+		margin-top: 140px;
+		margin-bottom: 149px;
+	}
 }
 .agenda .q-grid__column {
 	margin: 0 auto;
@@ -152,6 +193,8 @@ body {
 .agenda .heading--2 {
 	text-align: center;
 	color: #fff;
+	margin-top: 0;
+	margin-bottom: 80px;
 }
 .sessions td {
 	vertical-align: top;
@@ -178,6 +221,12 @@ body {
 }
 .session .description-wrapper {
 	margin-left: 2em;
+}
+.description-wrapper .description {
+	display: none;
+}
+.opened .description-wrapper .description {
+	display: inherit;
 }
 .desktop {
 	display: none;
@@ -221,27 +270,30 @@ body {
 	opacity: 1;
 	margin-bottom: 0.7em;
 }
-.opened.session .title:after {
+.title.toggle {
+	cursor: pointer;
+}
+.opened.session .title.toggle:after {
 	transform: rotate(0deg);
 }
-.opened.session .title:before {
+.opened.session .title.toggle:before {
 	transform: rotate(90deg);
 	opacity: 0;
 }
-.session .title:before,
-.session .title:after {
+.session .title.toggle:before,
+.session .title.toggle:after {
 	content: "";
 	position: absolute;
 	background: #2E8BE0;
 }
-.session .title:before {
+.session .title.toggle:before {
 	transition: all 0.35s ease-in-out;
 	width: 15px;
 	height: 1px;
 	top: 15px;
 	left: -25px;
 }
-.session .title:after {
+.session .title.toggle:after {
 	transition: all 0.35s ease-in-out;
 	transform: rotate(-90deg);
 	opacity: 1;
@@ -268,7 +320,7 @@ body {
 	padding-right: 30px;
 	color: #fff;
 	order: 1;
-    padding-top: 2.5em;
+	padding-top: 2.5em;
 }
 .venue-info .heading--2 {
 	color: #fff;
@@ -309,7 +361,7 @@ body {
 	}
 	.heading--1 {
 		font-size: 34px;
-		margin-top: 2em;
+		margin-top: 158px;
 		margin-left: 0;
 	}
 	.hero {
@@ -335,7 +387,7 @@ body {
 		display: block;
 	}
 	.cso-speakers__thumbnails-container {
-		padding-top: 92px;
+		padding-top: 60px;
 		display: flex;
 		flex-wrap: wrap;
 	}
@@ -354,11 +406,11 @@ body {
 	.cso-speakers__thumbnails-box {
 		padding-bottom: 0;
 	}
-	.session .title:before {
+	.session .title.toggle:before {
 		right: -40px;
 		left: auto;
 	}
-	.session .title:after {
+	.session .title.toggle:after {
 		right: -40px;
 		left: auto;
 	}
@@ -382,8 +434,8 @@ body {
 		margin-left: 8.3333%;
 	}
 	.about {
-		margin-left: 70px;
-		margin-right: 70px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 	.about .container {
 		display: flex;
@@ -408,6 +460,7 @@ body {
 	.about .quote {
 		font-size: 36px;
 		padding-right: 2em;
+		margin-top: 70px;
 	}
 	.about .open-quote {
 		left: -0.7em;
@@ -437,5 +490,46 @@ body {
 	}
 	.location .venue-info {
 		padding-right: 110px;
+	}
+}
+@media (min-width: 680px) {
+	.cso-header-container {
+		padding: 24px 50px 0px;
+	}
+}
+.footer-container {
+	margin-top: 0;
+}
+.about-read-more {
+	display: inline-block;
+	color: #FFF;
+	font-weight: 500;
+	text-decoration: none;
+	font-size: 16px;
+}
+.about-read-more ~ .paragraph--1 {
+	display: none;
+}
+.show .about-read-more {
+	display: none;
+}
+.show .about-read-more ~ .paragraph--1 {
+	display: inline;
+}
+.quote-row {
+	display: none;
+}
+.quote-row.show {
+	display: inherit;
+}
+@media (min-width: 720px) {
+	.about-read-more {
+		display: none;
+	}
+	.about-read-more ~ .paragraph--1 {
+		display: inline;
+	}
+	.quote-row {
+		display: inherit;
 	}
 }
